Update based on latest LyoDesigner